aggiunta prima section del main

--- a/index.html
+++ b/index.html
@@ -27,9 +27,29 @@
             <a href="#"><i class="fas fa-shopping-bag"></i>
         </div>
         </header>
-        <!--ine header-->
+        <!--fine header-->
 
     <main>
+<section class="container">
+    <div class="row">
+    <div class="col">
+        <img class="immagine" src="img/1b.webp" alt="primaimmagine">
+        <small>Levi's</small>
+        <h5>Relaxed FIT TEE UNISEX</h5>
+        <h6>14,99€ 29,99€</h6>
+    </div>
+    </div>
+    
+<section>
+    <div class="row">
+        <div class="col">
+            <img class="immagine" src="img/1b.webp" alt="primaimmagine">
+            <small>Levi's</small>
+            <h5>Relaxed FIT TEE UNISEX</h5>
+            <h6>14,99€ 29,99€</h6>
+        </div>
+
+</section>
 
     </main>
 
