aggiunta modifiche section

--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
             <a href="#"><i class="fas fa-user"></i></a>
             <a href="#"><i class="fas fa-heart"></i></a>
             <a href="#"><i class="fas fa-shopping-bag"></i>
-        </div>
         </header>
         <!--fine header-->
 
     <main>
 <section class="container">
-    <div class="row">
-    <div class="col">
+    <div class="row-section">
+    <div class="col-section">
         <img class="immagine" src="img/1b.webp" alt="primaimmagine">
         <small>Levi's</small>
         <h5>Relaxed FIT TEE UNISEX</h5>
@@ -41,16 +40,27 @@
     </div>
     
 <section>
-    <div class="row">
-        <div class="col">
+    <div class="row-section">
+        <div class="col-section">
             <img class="immagine" src="img/1b.webp" alt="primaimmagine">
             <small>Levi's</small>
             <h5>Relaxed FIT TEE UNISEX</h5>
             <h6>14,99€ 29,99€</h6>
         </div>
+        </div>
 
 </section>
 
+<section>
+    <div class="row-section">
+        <div class="col-section">
+            <img class="immagine" src="img/1b.webp" alt="primaimmagine">
+            <small>Levi's</small>
+            <h5>Relaxed FIT TEE UNISEX</h5>
+            <h6>14,99€ 29,99€</h6>
+        </div>
+        </div>
+</section>
     </main>
 
     <footer>
