alttre modifiche section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <main>
 <section class="container">
-    <div class="row-section">
+    
     <div class="col-section">
         <img class="immagine" src="img/1b.webp" alt="primaimmagine">
         <small>Levi's</small>
@@ -38,9 +38,8 @@
         <h6>14,99€ 29,99€</h6>
     </div>
     </div>
-    
-<section>
-    <div class="row-section">
+    </section>
+<section class="container">
         <div class="col-section">
             <img class="immagine" src="img/1b.webp" alt="primaimmagine">
             <small>Levi's</small>
@@ -51,8 +50,7 @@
 
 </section>
 
-<section>
-    <div class="row-section">
+<section class="container">
         <div class="col-section">
             <img class="immagine" src="img/1b.webp" alt="primaimmagine">
             <small>Levi's</small>
